Hero Section Complete

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="hero">
             <div class="hero-text">
                 <h1>Conmebol Copa America 2021</h1>
-                <a href="https://copaamerica.com/" target="_blank">Watch Live <i class="fas fa-arrow-right"></i></a>
+                <a class="btn hero-cta" href="https://copaamerica.com/" target="_blank">Watch Live <i class="fas fa-arrow-right"></i></a>
             </div>
             <div class="hero-img">
                 <img src="./images/banner.png" alt="A player is kicking a football">
