--- a/index.html
+++ b/index.html
@@ -26,7 +26,94 @@
     </header>
     <!-- main content -->
     <main>
-
+        <section id="player-board">
+            <div class="players">
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+                <article class="player">
+                    <div class="player-img">
+                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                    </div>
+                    <h3 class="player-name">Neymar Jr</h3>
+                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                </article>
+            </div>
+        </section>
     </main>
     <!-- footer area -->
     <footer>
