--- a/index.html
+++ b/index.html
@@ -33,42 +33,42 @@
                         <img src="./images/players/player-1.png" alt="Neymar Jr">
                     </div>
                     <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                    <p class="player-desc" >Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
                 </article>
                 <article class="player">
                     <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                        <img src="./images/players/player-1.png" alt="Lionel Messi">
                     </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                    <h3 class="player-name">Lionel Messi</h3>
+                    <p class="player-desc" >Lionel Andrés Messi also known as Leo Messi, (born 24 June 1987) is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.</p>
                 </article>
                 <article class="player">
                     <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                        <img src="./images/players/player-1.png" alt="Cristiano Ronaldo">
                     </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                    <h3 class="player-name">Cristiano Ronaldo</h3>
+                    <p class="player-desc" >Cristiano Ronaldo dos Santos Aveiro GOIH ComM (born 5 February 1985) is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
                 </article>
                 <article class="player">
                     <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                        <img src="./images/players/player-1.png" alt="Paulo Dybala">
                     </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                    <h3 class="player-name">Paulo Dybala</h3>
+                    <p class="player-desc" >Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
                 </article>
                 <article class="player">
                     <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                        <img src="./images/players/player-1.png" alt="Mesut Özil">
                     </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                    <h3 class="player-name">Mesut Özil</h3>
+                    <p class="player-desc" >Mesut Özil (born 15 October 1988) is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King"</p>
                 </article>
                 <article class="player">
                     <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
+                        <img src="./images/players/player-1.png" alt="Mauro Icardi">
                     </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
+                    <h3 class="player-name">Mauro Icardi</h3>
+                    <p class="player-desc" >Mauro Emanuel Icardi (born 19 February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
                 </article>
                 <article class="player">
                     <div class="player-img">
@@ -117,7 +117,18 @@
     </main>
     <!-- footer area -->
     <footer>
-
+        <div class="logo">
+            <a href="#"><img src="./images/Logo.png" alt="Football Logo"></a>
+        </div>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://dribbble.com/" target="_blank"><i class="fab fa-dribbble"></i></a>
+            <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+        </div>
+        <p class="copyright">
+            Copyright &copy; 2022 Football Club
+        </p>
     </footer>
 </body>
 </html>
