--- a/index.html
+++ b/index.html
@@ -15,103 +15,107 @@
     <header>
         <!-- hero section -->
         <section class="hero">
-            <div class="hero-text">
-                <h1>Conmebol Copa America 2021</h1>
-                <a class="btn hero-cta" href="https://copaamerica.com/" target="_blank">Watch Live <i class="fas fa-arrow-right"></i></a>
-            </div>
-            <div class="hero-img">
-                <img src="./images/banner.png" alt="A player is kicking a football">
+            <div class="container">
+                <div class="hero-text">
+                    <h1>Conmebol Copa America 2021</h1>
+                    <a class="btn hero-cta" href="https://copaamerica.com/" target="_blank">Watch Live <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="hero-img">
+                    <img src="./images/banner.png" alt="A player is kicking a football">
+                </div>
             </div>
         </section>
     </header>
     <!-- main content -->
     <main>
         <section id="player-board">
-            <div class="players">
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
-                    </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Lionel Messi">
-                    </div>
-                    <h3 class="player-name">Lionel Messi</h3>
-                    <p class="player-desc" >Lionel Andrés Messi also known as Leo Messi, (born 24 June 1987) is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Cristiano Ronaldo">
-                    </div>
-                    <h3 class="player-name">Cristiano Ronaldo</h3>
-                    <p class="player-desc" >Cristiano Ronaldo dos Santos Aveiro GOIH ComM (born 5 February 1985) is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Paulo Dybala">
-                    </div>
-                    <h3 class="player-name">Paulo Dybala</h3>
-                    <p class="player-desc" >Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Mesut Özil">
-                    </div>
-                    <h3 class="player-name">Mesut Özil</h3>
-                    <p class="player-desc" >Mesut Özil (born 15 October 1988) is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King"</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Mauro Icardi">
-                    </div>
-                    <h3 class="player-name">Mauro Icardi</h3>
-                    <p class="player-desc" >Mauro Emanuel Icardi (born 19 February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
-                    </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
-                    </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
-                    </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
-                    </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
-                    </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
-                </article>
-                <article class="player">
-                    <div class="player-img">
-                        <img src="./images/players/player-1.png" alt="Neymar Jr">
-                    </div>
-                    <h3 class="player-name">Neymar Jr</h3>
-                    <p class="player-desc" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo veritatis ducimus, aperiam dolores ex numquam consequuntur tempora sapiente, inventore quaerat id ab mollitia quidem iste!</p>
-                </article>
+            <div class="container">
+                <div class="players">
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-1.png" alt="Neymar Jr">
+                        </div>
+                        <h3 class="player-name">Neymar Jr</h3>
+                        <p class="player-desc" >Neymar da Silva Santos Júnior (born 5 February 1992), known as Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the Brazil national team.</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-2.png" alt="Lionel Messi">
+                        </div>
+                        <h3 class="player-name">Lionel Messi</h3>
+                        <p class="player-desc" >Lionel Andrés Messi also known as Leo Messi, (born 24 June 1987) is an Argentine professional footballer who plays as a forward or an attacking midfielder and captains the Argentina national team.</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-3.png" alt="Cristiano Ronaldo">
+                        </div>
+                        <h3 class="player-name">Cristiano Ronaldo</h3>
+                        <p class="player-desc" >Cristiano Ronaldo dos Santos Aveiro GOIH ComM (born 5 February 1985) is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains the Portugal national team.</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-4.png" alt="Paulo Dybala">
+                        </div>
+                        <h3 class="player-name">Paulo Dybala</h3>
+                        <p class="player-desc" >Paulo Exequiel Dybala (born 15 November 1993) is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team.</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-5.png" alt="Mesut Özil">
+                        </div>
+                        <h3 class="player-name">Mesut Özil</h3>
+                        <p class="player-desc" >Mesut Özil (born 15 October 1988) is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe. Nicknamed "The Assist King"</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-6.png" alt="Mauro Icardi">
+                        </div>
+                        <h3 class="player-name">Mauro Icardi</h3>
+                        <p class="player-desc" >Mauro Emanuel Icardi (born 19 February 1993) is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-7.png" alt="Ángel Di María">
+                        </div>
+                        <h3 class="player-name">Ángel Di María</h3>
+                        <p class="player-desc" >Ángel Fabián Di María (born 14 February 1988) is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team. He can play as either a winger or attacking midfielder.</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-8.png" alt="Kylian Mbappé">
+                        </div>
+                        <h3 class="player-name">Kylian Mbappé</h3>
+                        <p class="player-desc" >Kylian Mbappé Lottin (born 20 December 1998) is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team.</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-9.png" alt="Mohamed Salah">
+                        </div>
+                        <h3 class="player-name">Mohamed Salah</h3>
+                        <p class="player-desc" >Mohamed Salah Hamed Mahrous Ghaly (born 15 June 1992) is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team.</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-10.png" alt="Harry Kane">
+                        </div>
+                        <h3 class="player-name">Harry Kane</h3>
+                        <p class="player-desc" >Harry Edward Kane MBE (born 28 July 1993) is an English professional footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team.</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-11.png" alt="Kevin De Bruyne">
+                        </div>
+                        <h3 class="player-name">Kevin De Bruyne</h3>
+                        <p class="player-desc" >Kevin De Bruyne (born 28 June 1991) is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City, where he is vice-captain, and the Belgium national team.</p>
+                    </article>
+                    <article class="player">
+                        <div class="player-img">
+                            <img src="./images/players/player-12.png" alt="Philippe Coutinho">
+                        </div>
+                        <h3 class="player-name">Philippe Coutinho</h3>
+                        <p class="player-desc" >Philippe Coutinho Correia (born 12 June 1992) is a Brazilian professional footballer who plays as an attacking midfielder or winger for Spanish club Barcelona and the Brazil national team.</p>
+                    </article>
+                </div>
             </div>
         </section>
     </main>
