--- a/index.html
+++ b/index.html
@@ -119,6 +119,17 @@
             </div>
         </section>
     </main>
+
+    <section class="membership">
+        <div class="container">
+            <div class="membership-text">
+                <h2>Reciprocal Clubs</h2>
+                <p>Members of the Football Club enjoy reciprocal privileges at many of the fine clubs around the globe.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+            <div class="membership-image"></div>
+        </div>
+    </section>
     <!-- footer area -->
     <footer>
         <div class="logo">
