Own Section Added

--- a/index.html
+++ b/index.html
@@ -119,15 +119,37 @@
             </div>
         </section>
     </main>
-
-    <section class="membership">
+    <!-- membership area  -->
+    <section id="membership">
         <div class="container">
             <div class="membership-text">
                 <h2>Reciprocal Clubs</h2>
-                <p>Members of the Football Club enjoy reciprocal privileges at many of the fine clubs around the globe.</p>
+                <p>Members of Our Football Club enjoy reciprocal privileges at many of the fine clubs around the globe.</p>
                 <a href="#" class="btn">Learn More</a>
             </div>
-            <div class="membership-image"></div>
+            <div class="membership-image">
+                <img src="./images/players/player-1.png" alt="">
+                <img src="./images/players/player-2.png" alt="">
+                <img src="./images/players/player-3.png" alt="">
+                <img src="./images/players/player-4.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- game report area  -->
+    <section id="report">
+        <div class="container">
+            <div class="video-area">
+                <iframe src="https://www.youtube.com/embed/6tLxv5EsszA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="result-area">
+                <h4>Game Report</h4>
+                <h2>Great Win In Final Game</h2>
+                <div class="result">
+                    <h3>Argentina 1-0 Brazil, Copa America 2021 Final:</h3>
+                    <p>Lionel Messi's international trophy drought finally comes to an end as Argentina win Copa America 2021. The Albiceleste defeated Brazil at the Maracana in the summit clash with PSG winger Angel di Maria scoring the game's only goal in the first half.</p>
+                </div>
+                
+            </div>
         </div>
     </section>
     <!-- footer area -->
